--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,19 @@
 [package]
-name = "{{ project-name }}"
+name = "cosmic-caffeine"
 version = "0.1.0"
-edition = "2024"
-license = "{{ license }}"
-description = "{{ description }}"
-repository = "{{ repository-url }}"
+edition = "2021"
+license = "GPL-3.0"
+description = "A COSMIC applet to prevent system sleep"
+repository = "https://github.com/user/cosmic-caffeine"
 
 [dependencies]
+ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
+enumflags2 = "0.7"
 futures-util = "0.3.31"
 i18n-embed-fl = "0.10"
 rust-embed = "8.7.2"
 tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1"
 
 [dependencies.i18n-embed]
 version = "0.16"
@@ -18,25 +21,12 @@ features = ["fluent-system", "desktop-requester"]
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
-# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
 features = [
-    # Applet support
     "applet",
     "applet-token",
-    # Uses cosmic-settings-daemon to watch for config file changes
     "dbus-config",
-    # Support creating additional application windows.
     "multi-window",
-    # Uses tokio as the executor for the runtime
     "tokio",
-    # Add Wayland support to winit
     "wayland",
-    # Windowing support for X11, Windows, Mac, & Redox
     "winit",
 ]
-
-# Uncomment to test a locally-cloned libcosmic
-# [patch.'https://github.com/pop-os/libcosmic']
-# libcosmic = { path = "../libcosmic" }
-# cosmic-config = { path = "../libcosmic/cosmic-config" }
-# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
