--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ i18n-embed-fl = "0.10"
 rust-embed = "8.7.2"
 tokio = { version = "1.48.0", features = ["full"] }
 tracing = "0.1"
+zbus = { version = "5.13", features = ["tokio"] }
+serde = { version = "1.0", features = ["derive"] }
+
 
 [dependencies.i18n-embed]
 version = "0.16"
